--- a/package.json
+++ b/package.json
@@ -4,26 +4,61 @@
   "description": "Angular 1.x Starter with webpack",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "bundle": "webpack"
+    "dev": "SET NODE_ENV=development & webpack-dev-server --progress --hot --inline --config ./config/development.js",
+    "build": "SET NODE_ENV=production & webpack --progress --config ./config/production.js",
+    "test": "BABEL_ENV=test"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/OmerAli/Angular1.x-Webpack-Starter"
+    "url": "https://github.com/OmerAli/Angular-1.x-Webpack-Starter"
   },
   "keywords": [
+    "bundle",
+    "bundling",
     "AngularJS",
     "Express",
-    "SCSS"
+    "SCSS",
+    "npm",
+    "webpack"
   ],
   "author": "Omer Ali <omer.a@nebras.ae>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/OmerAli/Angular1.x-Webpack-Starter/issues"
+    "url": "https://github.com/OmerAli/Angular-1.x-Webpack-Starter/issues"
   },
-  "homepage": "https://github.com/OmerAli/Angular1.x-Webpack-Starter/blob/master/README.md",
+  "homepage": "https://github.com/OmerAli/Angular-1.x-Webpack-Starte/blob/master/README.md",
   "devDependencies": {
-    "webpack": "^3.10.0"
+    "@babel/core": "^7.0.0-beta.32",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.34",
+    "@babel/preset-env": "^7.0.0-beta.34",
+    "@babel/preset-stage-0": "^7.0.0-beta.34",
+    "autoprefixer": "^7.1.6",
+    "babel-loader": "8.0.0-beta.0",
+    "babel-plugin-lodash": "^3.3.2",
+    "babel-plugin-module-resolver": "^3.0.0",
+    "babel-preset-es2015": "6.1.18",
+    "clean-webpack-plugin": "^0.1.17",
+    "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.5",
+    "glob": "^7.1.2",
+    "html-loader": "^0.5.1",
+    "html-webpack-plugin": "^2.30.1",
+    "lodash-webpack-plugin": "^0.11.4",
+    "node-sass": "^4.6.0",
+    "postcss-loader": "^2.0.8",
+    "postcss-nested": "^2.1.2",
+    "resolve-url-loader": "^2.2.0",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.0",
+    "uglifyjs-webpack-plugin": "^1.0.1",
+    "webpack": "^3.10.0",
+    "webpack-bundle-analyzer": "^2.9.1",
+    "webpack-dev-server": "^2.9.4"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@uirouter/angularjs": "^1.0.12",
+    "angular": "^1.6.4",
+    "angular-sanitize": "^1.6.4"
+  }
 }
